[package]
name = "subtools"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A crate of utils to operate traitements on subtitles"
repository = "https://github.com/gwen-lg/subtools"
authors = ["Gwen Lg <me@gwenlg.fr>"]
keywords = ["subtitles", "subtile", "parse", "editing"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
chardetng = "0.1"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
matroska-demuxer = "0.5.0"
subtile = "0.3"
subtile-ocr = "0.2"
thiserror = "2.0"

[patch.crates-io]
subtile = { path = "../subtile" }
subtile-ocr = { path = "../subtile-ocr" }

[lints.rust]
missing_docs = "deny"
unused_imports = "deny"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
# nursery = { priority = -1, level = "deny" }
# pedantic = { priority = -1, level = "warn" }
perf = { priority = -1, level = "deny" }
# restriction  = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# suspicious = { priority = -1, level = "deny" }
bind_instead_of_map = "deny"
borrowed_box = "deny"
cast_lossless = "deny"
clone_on_copy = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
extra_unused_lifetimes = "deny"
if_not_else = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
or_fun_call = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
use_self = "deny"
unreadable_literal = "deny"
useless_conversion = "deny"
